--- a/src/components/Home/components/ChatWindow.css
+++ b/src/components/Home/components/ChatWindow.css
@@ -7,6 +7,7 @@
     border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
     padding: 5px 5px;
+    background-color: white;
 }
 
 .chat-input-container > button {
@@ -19,4 +20,9 @@
     border: none;
     width: calc(100% - 40px);
     outline: none;
+}
+
+.chat-text {
+    margin: 0;
+    font-size: 14px;
 }
